@@ -18,11 +18,6 @@ import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import jakarta.validation.ConstraintViolation;
-import jakarta.validation.Validation;
-import jakarta.validation.Validator;
-import jakarta.validation.ValidatorFactory;
-
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -46,12 +41,11 @@ import de.tum.cit.aet.artemis.communication.domain.PostSortCriterion;
 import de.tum.cit.aet.artemis.communication.domain.conversation.Channel;
 import de.tum.cit.aet.artemis.communication.domain.conversation.Conversation;
 import de.tum.cit.aet.artemis.communication.domain.conversation.OneToOneChat;
-import de.tum.cit.aet.artemis.communication.domain.notification.ConversationNotification;
-import de.tum.cit.aet.artemis.communication.domain.notification.Notification;
+import de.tum.cit.aet.artemis.communication.dto.CreatePostConversationDTO;
+import de.tum.cit.aet.artemis.communication.dto.CreatePostDTO;
 import de.tum.cit.aet.artemis.communication.dto.PostContextFilterDTO;
 import de.tum.cit.aet.artemis.communication.dto.PostDTO;
 import de.tum.cit.aet.artemis.communication.repository.ConversationMessageRepository;
-import de.tum.cit.aet.artemis.communication.repository.conversation.ConversationNotificationRepository;
 import de.tum.cit.aet.artemis.communication.test_repository.ConversationParticipantTestRepository;
 import de.tum.cit.aet.artemis.communication.test_repository.CourseNotificationTestRepository;
 import de.tum.cit.aet.artemis.communication.test_repository.OneToOneChatTestRepository;
@@ -61,10 +55,7 @@ import de.tum.cit.aet.artemis.core.domain.CourseInformationSharingConfiguration;
 import de.tum.cit.aet.artemis.core.domain.User;
 import de.tum.cit.aet.artemis.core.dto.SortingOrder;
 import de.tum.cit.aet.artemis.core.security.SecurityUtils;
-import de.tum.cit.aet.artemis.core.service.feature.Feature;
-import de.tum.cit.aet.artemis.core.service.feature.FeatureToggleService;
 import de.tum.cit.aet.artemis.exercise.domain.Exercise;
-import de.tum.cit.aet.artemis.plagiarism.domain.PlagiarismCase;
 import de.tum.cit.aet.artemis.shared.base.AbstractSpringIntegrationIndependentTest;
 
 class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
@@ -86,13 +77,7 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     private ConversationUtilService conversationUtilService;
 
     @Autowired
-    private ConversationNotificationRepository conversationNotificationRepository;
-
-    @Autowired
     private CourseNotificationTestRepository courseNotificationRepository;
-
-    @Autowired
-    private FeatureToggleService featureToggleService;
 
     private List<Post> existingCourseWideMessages;
 
@@ -170,7 +155,7 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         var requestingUser = userTestRepository.getUser();
 
         long[] conversationIds = new long[] { createdPost.getConversation().getId() };
-        PostContextFilterDTO postContextFilter = new PostContextFilterDTO(courseId, null, conversationIds, null, null, false, false, false, false, null, null);
+        PostContextFilterDTO postContextFilter = new PostContextFilterDTO(courseId, null, conversationIds, null, null, false, false, false, null, null);
         assertThat(conversationMessageRepository.findMessages(postContextFilter, Pageable.unpaged(), requestingUser.getId())).hasSize(1);
 
         // both conversation participants should be notified
@@ -182,11 +167,8 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @ValueSource(booleans = { false, true })
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void testCreateConversationPostInCourseWideChannel(boolean isAnnouncement) throws Exception {
-        // Since we are testing old notifications
-        featureToggleService.disableFeature(Feature.CourseSpecificNotifications);
-
         Channel channel = conversationUtilService.createCourseWideChannel(course, "test", isAnnouncement);
-        ConversationParticipant otherParticipant = conversationUtilService.addParticipantToConversation(channel, TEST_PREFIX + "student2");
+        conversationUtilService.addParticipantToConversation(channel, TEST_PREFIX + "student2");
         ConversationParticipant author = conversationUtilService.addParticipantToConversation(channel, TEST_PREFIX + "student1");
 
         Post postToSave = new Post();
@@ -200,26 +182,13 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         // conversation participants should be notified via one broadcast
         verify(websocketMessagingService, never()).sendMessageToUser(anyString(), anyString(), any(PostDTO.class));
         verify(websocketMessagingService, timeout(2000).times(1)).sendMessage(eq("/topic/metis/courses/" + courseId), any(PostDTO.class));
-
-        if (isAnnouncement) {
-            verify(mailService, timeout(2000).times(1)).sendNotification(any(ConversationNotification.class), eq(otherParticipant.getUser()), any(Post.class));
-            verify(mailService, timeout(2000).times(1)).sendNotification(any(ConversationNotification.class), eq(author.getUser()), any(Post.class));
-        }
-        else {
-            verify(mailService, never()).sendNotification(any(Notification.class), any(User.class), any(Post.class));
-        }
-
-        featureToggleService.enableFeature(Feature.CourseSpecificNotifications);
     }
 
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void testCreateAnnouncementInPrivateChannel() throws Exception {
-        // Since we are testing old notifications
-        featureToggleService.disableFeature(Feature.CourseSpecificNotifications);
-
         Channel channel = conversationUtilService.createAnnouncementChannel(course, "test");
-        ConversationParticipant otherParticipant = conversationUtilService.addParticipantToConversation(channel, TEST_PREFIX + "student1");
+        conversationUtilService.addParticipantToConversation(channel, TEST_PREFIX + "student1");
         ConversationParticipant author = conversationUtilService.addParticipantToConversation(channel, TEST_PREFIX + "instructor1");
 
         Post postToSave = new Post();
@@ -234,11 +203,6 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         verify(websocketMessagingService, timeout(2000).times(2)).sendMessage(anyString(),
                 (Object) argThat(argument -> argument instanceof PostDTO postDTO && postDTO.post().equals(createdPost)));
         verify(websocketMessagingService, never()).sendMessage(eq("/topic/metis/courses/" + courseId), any(PostDTO.class));
-
-        verify(mailService, timeout(2000).times(1)).sendNotification(any(ConversationNotification.class), eq(otherParticipant.getUser()), any(Post.class));
-        verify(mailService, timeout(2000).times(1)).sendNotification(any(ConversationNotification.class), eq(author.getUser()), any(Post.class));
-
-        featureToggleService.enableFeature(Feature.CourseSpecificNotifications);
     }
 
     @Test
@@ -249,16 +213,14 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
 
         // given
         Channel channel = conversationUtilService.createCourseWideChannel(course, "test");
-        ConversationParticipant author = conversationUtilService.addParticipantToConversation(channel, TEST_PREFIX + "student1");
-        Post postToSave = new Post();
-        postToSave.setAuthor(author.getUser());
-        postToSave.setConversation(channel);
+        CreatePostDTO postDTOToSave = new CreatePostDTO("", "", false, new CreatePostConversationDTO(channel.getId()));
 
         // then
-        // expected are 6 database calls independent of the number of students in the course.
-        // 4 calls are for user authentication checks, 2 calls to update database
+        // expected are 7 database calls independent of the number of students in the course.
+        // 4 calls are for user authentication checks, 3 calls to update database
         // further database calls are made in async code
-        assertThatDb(() -> request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postToSave, Post.class, HttpStatus.CREATED)).hasBeenCalledTimes(6);
+        assertThatDb(() -> request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postDTOToSave, Post.class, HttpStatus.CREATED))
+                .hasBeenCalledTimes(7);
     }
 
     @ParameterizedTest
@@ -273,8 +235,10 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         postToSave.setConversation(channel);
         postToSave.setContent(userMention);
 
+        CreatePostDTO postDTOToSave = new CreatePostDTO(postToSave.getContent(), "", false, new CreatePostConversationDTO(postToSave.getConversation().getId()));
+
         if (!isUserMentionValid) {
-            request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postToSave, Post.class, HttpStatus.BAD_REQUEST);
+            request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postDTOToSave, Post.class, HttpStatus.BAD_REQUEST);
             verify(websocketMessagingService, never()).sendMessageToUser(anyString(), anyString(), any(PostDTO.class));
             verify(websocketMessagingService, never()).sendMessage(anyString(), any(PostDTO.class));
             return;
@@ -329,11 +293,8 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         Post createdPost = createPostAndAwaitAsyncCode(postToSave);
         checkCreatedMessagePost(postToSave, createdPost);
 
-        ConversationNotification notificationForPost = conversationNotificationRepository.findAll().stream().filter(notification -> createdPost.equals(notification.getMessage()))
-                .findFirst().orElseThrow();
-
         verify(websocketMessagingService, timeout(2000).times(1)).sendMessage(eq("/topic/metis/courses/" + course.getId()),
-                (Object) argThat(argument -> argument instanceof PostDTO postDTO && postDTO.post().equals(createdPost) && postDTO.notification().equals(notificationForPost)));
+                (Object) argThat(argument -> argument instanceof PostDTO postDTO && postDTO.post().equals(createdPost)));
     }
 
     @ParameterizedTest
@@ -351,7 +312,7 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         var requestingUser = userTestRepository.getUser();
 
         long[] conversationIds = new long[] { posts.getFirst().getConversation().getId() };
-        PostContextFilterDTO postContextFilter = new PostContextFilterDTO(course.getId(), null, conversationIds, null, null, false, false, false, false, null, null);
+        PostContextFilterDTO postContextFilter = new PostContextFilterDTO(course.getId(), null, conversationIds, null, null, false, false, false, null, null);
         if (pageSize == LOWER_PAGE_SIZE) {
             assertThat(conversationMessageRepository.findMessages(postContextFilter, Pageable.ofSize(pageSize), requestingUser.getId())).hasSize(LOWER_PAGE_SIZE);
         }
@@ -369,13 +330,15 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         assertThat(persistedCourse.getCourseInformationSharingConfiguration()).isEqualTo(CourseInformationSharingConfiguration.DISABLED);
 
         Post postToSave = createPostWithOneToOneChat(TEST_PREFIX);
+        CreatePostDTO postDTOToSave = new CreatePostDTO(postToSave.getContent(), "", false, new CreatePostConversationDTO(postToSave.getConversation().getId()));
+
         var requestingUser = userTestRepository.getUser();
 
         long[] conversationIds = new long[] { postToSave.getConversation().getId() };
-        PostContextFilterDTO postContextFilter = new PostContextFilterDTO(courseId, null, conversationIds, null, null, false, false, false, false, null, null);
+        PostContextFilterDTO postContextFilter = new PostContextFilterDTO(courseId, null, conversationIds, null, null, false, false, false, null, null);
         var numberOfPostsBefore = conversationMessageRepository.findMessages(postContextFilter, Pageable.unpaged(), requestingUser.getId()).getSize();
 
-        Post notCreatedPost = request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postToSave, Post.class, HttpStatus.BAD_REQUEST);
+        Post notCreatedPost = request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postDTOToSave, Post.class, HttpStatus.BAD_REQUEST);
 
         assertThat(notCreatedPost).isNull();
         assertThat(conversationMessageRepository.findMessages(postContextFilter, Pageable.unpaged(), requestingUser.getId())).hasSize(numberOfPostsBefore);
@@ -398,29 +361,18 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         postToSave.setConversation(existingConversationMessages.getFirst().getConversation());
         var requestingUser = userTestRepository.getUser();
 
+        CreatePostDTO postDTOToSave = new CreatePostDTO(postToSave.getContent(), "", false, new CreatePostConversationDTO(postToSave.getConversation().getId()));
+
         long[] conversationIds = new long[] { postToSave.getConversation().getId() };
-        PostContextFilterDTO postContextFilter = new PostContextFilterDTO(courseId, null, conversationIds, null, null, false, false, false, false, null, null);
+        PostContextFilterDTO postContextFilter = new PostContextFilterDTO(courseId, null, conversationIds, null, null, false, false, false, null, null);
         var numberOfPostsBefore = conversationMessageRepository.findMessages(postContextFilter, Pageable.unpaged(), requestingUser.getId()).getSize();
 
-        Post notCreatedPost = request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postToSave, Post.class, HttpStatus.FORBIDDEN);
+        Post notCreatedPost = request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postDTOToSave, Post.class, HttpStatus.FORBIDDEN);
         assertThat(notCreatedPost).isNull();
         assertThat(conversationMessageRepository.findMessages(postContextFilter, Pageable.unpaged(), requestingUser.getId())).hasSize(numberOfPostsBefore);
 
         // conversation participants should not be notified
         verify(websocketMessagingService, never()).sendMessageToUser(anyString(), anyString(), any(PostDTO.class));
-    }
-
-    @Test
-    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
-    void testValidatePostContextConstraintViolation() throws Exception {
-        ValidatorFactory validatorFactory = Validation.buildDefaultValidatorFactory();
-        Validator validator = validatorFactory.getValidator();
-        validatorFactory.close();
-        Post invalidPost = createPostWithOneToOneChat(TEST_PREFIX);
-        invalidPost.setPlagiarismCase(new PlagiarismCase());
-        request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", invalidPost, Post.class, HttpStatus.BAD_REQUEST);
-        Set<ConstraintViolation<Post>> constraintViolations = validator.validate(invalidPost);
-        assertThat(constraintViolations).hasSize(1);
     }
 
     @Test
@@ -721,7 +673,8 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         var student2 = userTestRepository.findOneByLogin(TEST_PREFIX + "student2").orElseThrow();
 
         Post postToSave1 = createPostWithOneToOneChat(TEST_PREFIX);
-        Post createdPost1 = request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postToSave1, Post.class, HttpStatus.CREATED);
+        CreatePostDTO postDTOToSave1 = new CreatePostDTO(postToSave1.getContent(), "", false, new CreatePostConversationDTO(postToSave1.getConversation().getId()));
+        Post createdPost1 = request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postDTOToSave1, Post.class, HttpStatus.CREATED);
 
         userUtilService.changeUser(TEST_PREFIX + "student2");
         // we read the messages by "getting" them from the server as student
@@ -746,8 +699,9 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         final var student2 = userTestRepository.findOneByLogin(TEST_PREFIX + "student2").orElseThrow();
 
         Post postToSave1 = createPostWithOneToOneChat(TEST_PREFIX);
+        CreatePostDTO postToSaveDTO1 = new CreatePostDTO(postToSave1.getContent(), "", false, new CreatePostConversationDTO(postToSave1.getConversation().getId()));
 
-        Post createdPost1 = request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postToSave1, Post.class, HttpStatus.CREATED);
+        Post createdPost1 = request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postToSaveDTO1, Post.class, HttpStatus.CREATED);
         final var oneToOneChat1 = createdPost1.getConversation();
         // student 1 adds a message, so the unread count for student 2 should be 1
         await().untilAsserted(() -> {
@@ -797,7 +751,7 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         List<Post> pinnedPosts = request.getList("/api/communication/courses/" + courseId + "/messages", HttpStatus.OK, Post.class, params);
 
         assertThat(pinnedPosts).hasSize(1);
-        assertThat(pinnedPosts.get(0).getId()).isEqualTo(updatedPinnedPost.getId());
+        assertThat(pinnedPosts.getFirst().getId()).isEqualTo(updatedPinnedPost.getId());
 
         params.set("pinnedOnly", "false");
         List<Post> allPosts = request.getList("/api/communication/courses/" + courseId + "/messages", HttpStatus.OK, Post.class, params);
@@ -848,8 +802,8 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         // include the newly created conversation into all course-wide conversations
         long[] conversationIds = Stream.concat(existingCourseWideChannelIds.stream(), Stream.of(directPost.getConversation().getId())).mapToLong(Long::longValue).toArray();
 
-        PostContextFilterDTO filter = new PostContextFilterDTO(course.getId(), null, conversationIds, null, "SearchTest", false, false, false, false,
-                PostSortCriterion.CREATION_DATE, SortingOrder.DESCENDING);
+        PostContextFilterDTO filter = new PostContextFilterDTO(course.getId(), null, conversationIds, null, "SearchTest", false, false, false, PostSortCriterion.CREATION_DATE,
+                SortingOrder.DESCENDING);
 
         var student1 = userTestRepository.findOneByLogin(TEST_PREFIX + "student1").orElseThrow();
         Page<Post> searchResults = conversationMessageRepository.findMessages(filter, Pageable.unpaged(), student1.getId());
@@ -894,8 +848,8 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         // include the newly created conversation into all course-wide conversations
         long[] conversationIds = Stream.concat(existingCourseWideChannelIds.stream(), Stream.of(nonCourseWideChannel.getId())).mapToLong(Long::longValue).toArray();
 
-        PostContextFilterDTO filter = new PostContextFilterDTO(course.getId(), null, conversationIds, null, "SearchTest", false, false, false, false,
-                PostSortCriterion.CREATION_DATE, SortingOrder.DESCENDING);
+        PostContextFilterDTO filter = new PostContextFilterDTO(course.getId(), null, conversationIds, null, "SearchTest", false, false, false, PostSortCriterion.CREATION_DATE,
+                SortingOrder.DESCENDING);
 
         var student1 = userTestRepository.findOneByLogin(TEST_PREFIX + "student1").orElseThrow();
         Page<Post> searchResults = conversationMessageRepository.findMessages(filter, Pageable.unpaged(), student1.getId());
@@ -904,11 +858,50 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         assertThat(resultPosts).extracting(Post::getContent).contains("SearchTestGroup");
     }
 
+    @ParameterizedTest
+    @MethodSource("searchQueryAndAuthorProvider")
+    @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
+    void testWhetherShouldIncludeBasePostWhenSearchingMessagesByContentAndAuthor(String searchQuery, String authorLogin, boolean shouldBeIncluded) throws Exception {
+        // Create base post by student1 with content "base"
+        Post basePost = createPostWithOneToOneChat(TEST_PREFIX);
+        basePost.setContent("base");
+        basePost = createPostAndAwaitAsyncCode(basePost);
+
+        // Add an answer from student2 with content "answer" to the base post
+        userUtilService.changeUser(TEST_PREFIX + "student2");
+        AnswerPost answer = new AnswerPost();
+        answer.setContent("answer");
+        answer.setPost(basePost);
+        createAnswerPostAndAwaitAsyncCode(answer);
+
+        // Use PostContextFilterDTO and conversationMessageRepository.findMessages
+        long conversationId = basePost.getConversation().getId();
+        long authorId = userTestRepository.findOneByLogin(authorLogin).orElseThrow().getId();
+        PostContextFilterDTO filter = new PostContextFilterDTO(courseId, null, new long[] { conversationId }, new long[] { authorId }, searchQuery, false, false, false,
+                PostSortCriterion.CREATION_DATE, SortingOrder.DESCENDING);
+        Page<Post> returnedPage = conversationMessageRepository.findMessages(filter, Pageable.unpaged(), 0L /* Not used here */);
+        List<Post> returnedPosts = returnedPage.getContent();
+
+        if (shouldBeIncluded) {
+            assertThat(returnedPosts).isNotEmpty();
+            assertThat(returnedPosts).extracting(Post::getContent).contains("base");
+        }
+        else {
+            assertThat(returnedPosts).isEmpty();
+        }
+    }
+
+    private static Stream<Arguments> searchQueryAndAuthorProvider() {
+        String baseAuthor = TEST_PREFIX + "student1";
+        String answerAuthor = TEST_PREFIX + "student2";
+
+        return Stream.of(Arguments.of("base", baseAuthor, true), Arguments.of("answer", answerAuthor, true), Arguments.of("base", answerAuthor, false),
+                Arguments.of("answer", baseAuthor, false));
+    }
+
     @Test
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void shouldSendCourseNotificationForNewPostWhenFeatureIsEnabled() throws Exception {
-        featureToggleService.enableFeature(Feature.CourseSpecificNotifications);
-
         var channel = createChannelWithTwoStudents();
         Post postToSave = new Post();
         postToSave.setAuthor(userTestRepository.findOneByLogin(TEST_PREFIX + "student1").orElseThrow());
@@ -927,8 +920,6 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @Test
     @WithMockUser(username = TEST_PREFIX + "student1", roles = "USER")
     void shouldSendMentionNotificationForNewPostWhenFeatureIsEnabled() throws Exception {
-        featureToggleService.enableFeature(Feature.CourseSpecificNotifications);
-
         User mentionedUser = userTestRepository.findOneByLogin(TEST_PREFIX + "student2").orElseThrow();
 
         var channel = createChannelWithTwoStudents();
@@ -937,7 +928,10 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         postToSave.setConversation(channel);
         postToSave.setContent("[user]" + mentionedUser.getName() + "(" + mentionedUser.getLogin() + ")[/user] Check this out!");
 
-        request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postToSave, Post.class, HttpStatus.CREATED);
+        CreatePostDTO postDTOToSave = new CreatePostDTO(postToSave.getContent(), postToSave.getTitle(), postToSave.getHasForwardedMessages(),
+                new CreatePostConversationDTO(postToSave.getConversation().getId()));
+
+        request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postDTOToSave, Post.class, HttpStatus.CREATED);
 
         await().atMost(Duration.ofSeconds(5)).untilAsserted(() -> {
             List<CourseNotification> notifications = courseNotificationRepository.findAll();
@@ -949,8 +943,6 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     @Test
     @WithMockUser(username = TEST_PREFIX + "instructor1", roles = "INSTRUCTOR")
     void shouldSendAnnouncementNotificationWhenFeatureIsEnabled() throws Exception {
-        featureToggleService.enableFeature(Feature.CourseSpecificNotifications);
-
         Channel channel = conversationUtilService.createAnnouncementChannel(course, "test-announcement");
         conversationUtilService.addParticipantToConversation(channel, TEST_PREFIX + "student1");
         ConversationParticipant author = conversationUtilService.addParticipantToConversation(channel, TEST_PREFIX + "instructor1");
@@ -960,7 +952,10 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
         postToSave.setConversation(channel);
         postToSave.setContent("Important announcement!");
 
-        request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postToSave, Post.class, HttpStatus.CREATED);
+        CreatePostDTO postDTOToSave = new CreatePostDTO(postToSave.getContent(), postToSave.getTitle(), postToSave.getHasForwardedMessages(),
+                new CreatePostConversationDTO(postToSave.getConversation().getId()));
+
+        request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postDTOToSave, Post.class, HttpStatus.CREATED);
 
         await().atMost(Duration.ofSeconds(5)).untilAsserted(() -> {
             List<CourseNotification> notifications = courseNotificationRepository.findAll();
@@ -1035,18 +1030,25 @@ class MessageIntegrationTest extends AbstractSpringIntegrationIndependentTest {
     }
 
     /**
-     * Calls the POST /messages endpoint to create a new message and awaits the asynchronously executed code
-     * <p>
-     * This method awaits the asynchronous calls, by checking that the notification for the new message has been stored in the database,
-     * which is a call close to the end of the asynchronously executed code.
+     * Calls the POST /messages endpoint to create a new message
      *
      * @param postToSave post to save in the database
      * @return saved post
      */
     private Post createPostAndAwaitAsyncCode(Post postToSave) throws Exception {
-        Post savedPost = request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postToSave, Post.class, HttpStatus.CREATED);
-        await().until(() -> conversationNotificationRepository.findAll().stream().map(ConversationNotification::getMessage).collect(Collectors.toSet()).contains(savedPost));
-        return savedPost;
+        var postDTOToSave = new CreatePostDTO(postToSave.getContent(), postToSave.getTitle(), postToSave.getHasForwardedMessages(),
+                new CreatePostConversationDTO(postToSave.getConversation().getId()));
+        return request.postWithResponseBody("/api/communication/courses/" + courseId + "/messages", postDTOToSave, Post.class, HttpStatus.CREATED);
+    }
+
+    /**
+     * Calls the POST /answer-messages endpoint to create a new answer post
+     *
+     * @param answerPostToSave answer post to save in the database
+     * @return saved answer post
+     */
+    private AnswerPost createAnswerPostAndAwaitAsyncCode(AnswerPost answerPostToSave) throws Exception {
+        return request.postWithResponseBody("/api/communication/courses/" + courseId + "/answer-messages", answerPostToSave, AnswerPost.class, HttpStatus.CREATED);
     }
 
     private static List<CourseInformationSharingConfiguration> courseInformationSharingConfigurationProvider() {
